--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @font-face {
   font-family: 'seven_segmentregular';
-  src: url('./components/fonts/seven_segment-webfont.woff2') format('woff2'),
-       url('./components/fonts/seven_segment-webfont.woff') format('woff');
+  src:
+    url('./components/fonts/seven_segment-webfont.woff2') format('woff2'),
+    url('./components/fonts/seven_segment-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,7 +27,7 @@
   font-weight: bold;
   text-align: right;
   height: 100px;
-  font-family: 'seven_segmentregular';
+  font-family: 'seven_segmentregular', sans-serif;
   font-size: 1.8em;
 }
 
@@ -46,24 +47,52 @@
 
 .all-buttons {
   height: 100%;
-  border-style: double;
   border-color: gray;
   border-width: 1px;
   font-size: 1.4em;
 }
 
-.default-background { background-color: orange; }
+.default-background {
+  background-color: orange;
+}
 
-.default-background:hover { background-color: rgb(207, 135, 0); }
+.default-background:hover {
+  background-color: rgb(207, 135, 0);
+}
 
-.lightgray-background { background-color: lightgray; }
+.default-background:active {
+  background-color: rgb(167, 108, 0);
+}
 
-.lightgray-background:hover { background-color: rgb(185, 185, 185); }
+.lightgray-background {
+  background-color: lightgray;
+}
 
-.red-background { background-color: rgb(121, 35, 35); color: white; }
+.lightgray-background:hover {
+  background-color: rgb(185, 185, 185);
+}
 
-.red-background:hover { background-color: rgb(167, 32, 32);}
+.lightgray-background:active {
+  background-color: rgb(138, 138, 138);
+}
 
-.regular-button { width: 25%; }
+.red-background {
+  background-color: rgb(121, 35, 35);
+  color: white;
+}
 
-.wide-button { width: 50%; }
+.red-background:hover {
+  background-color: rgb(167, 32, 32);
+}
+
+.red-background:active {
+  background-color: rgb(163, 17, 17);
+}
+
+.regular-button {
+  width: 25%;
+}
+
+.wide-button {
+  width: 50%;
+}
